--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-image: url("../images/background.jpg");
     background-color: #212121;
     font-family: 'Montserrat', sans-serif;
 }
@@ -11,8 +12,6 @@ body {
 }
 
 .centre {
-    width: 75%;
-    margin: auto;
     text-align: center;
 }
 
@@ -53,23 +52,3 @@ p span {
 .fa:hover {
     opacity: 0.7;
 }
-
-/*.fa-facebook {
-    color: #FFFFFF;
-}
-
-.fa-linkedin {
-  color: #FFFFFF;
-}
-
-.fa-github {
-  color: #FFFFFF;
-}
-
-.fa-quora {
-    color: #FFFFFF;
-}
-
-.fa-envelope-o {
-    color: #FFFFFF;
-}*/
