--- a/css/master.css
+++ b/css/master.css
@@ -15,6 +15,13 @@ body {
     text-align: center;
 }
 
+#index-particles canvas{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 #profile-box {
     color: white;
     margin-top: 100px;
