--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("../images/background.jpg");
+    background-image: url("/images/background.jpg");
     background-color: #212121;
     font-family: 'Montserrat', sans-serif;
 }
@@ -23,8 +23,9 @@ body {
 }
 
 #profile-box {
+    margin-top: 130px;
+    margin-bottom: 150px;
     color: white;
-    margin-top: 100px;
 }
 
 #profile-pic {
@@ -61,23 +62,23 @@ body {
 }
 
 #technologies {
-    background-image: url("../images/coding_background.jpg");
+    position: relative;
+    height: 410px;
+    background-image: url("/images/coding_background.jpg");
     background-color: #212121;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 410px;
-    position: relative;
 }
 
 #typed {
-    color: white;
-    font-size: 50px;
-    font-weight: bold;
     position: absolute;
     margin-top: 170px;
     margin-left: 50px;
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
 }
 
 #scene {
@@ -107,4 +108,56 @@ body {
 #python-image {
     margin-top: 0px;
     margin-left: 82%;
+}
+
+#projects {
+    position: relative;
+    height: 300px;
+    color: white;
+}
+
+#github-logo {
+    position: absolute;
+    width: 300px;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+#projects-text {
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 400px;
+}
+
+#projects-text h3 span{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+#about-me {
+    margin-bottom: 30px;
+    color: white;
+    font-size: 20px;
+    text-align: justify;
+}
+
+#about-me h1 {
+    font-size: 40px;
+}
+
+#footer {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    background-color: #212121;
+}
+
+#footer .fa {
+    font-size: 25px;
+    height: 40px;
+    width: 40px;
+    color: #FFFFFF;
+}
+
+#footer .fa:hover {
+    opacity: 0.7;
 }
