--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("../images/background.jpg");
+    background-image: url("/images/background.jpg");
     background-color: #212121;
     font-family: 'Montserrat', sans-serif;
 }
@@ -13,4 +13,28 @@ body {
 
 .centre {
     text-align: center;
+}
+
+
+
+
+
+
+
+
+#footer {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    background-color: #212121;
+}
+
+#footer .fa {
+    font-size: 25px;
+    height: 40px;
+    width: 40px;
+    color: #FFFFFF;
+}
+
+#footer .fa:hover {
+    opacity: 0.7;
 }
