--- a/css/projects.css
+++ b/css/projects.css
@@ -15,12 +15,41 @@ body {
     text-align: center;
 }
 
+#projects {
+    margin-top: 130px;
+    margin-bottom: 100px;
+}
 
+#projects a {
+    text-decoration: none;
+}
 
+#projects a:hover {
+    text-decoration: none;
+}
 
+.list-item {
+    margin-bottom: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white;
+}
 
+.list-item img {
+    float: left;
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border-radius: 10%;
+}
 
+.list-item div {
+    margin-left: 250px;
+}
 
+.list-item:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
 
 #footer {
     padding-top: 20px;
