--- a/css/index.css
+++ b/css/index.css
@@ -161,3 +161,42 @@ body {
 #footer .fa:hover {
     opacity: 0.7;
 }
+
+/* for responsive website */
+@media screen and (max-width: 780px) {
+
+    #technologies {
+        position: relative;
+        height: 300px;
+        background-image: url("/images/index/coding_background.jpg");
+        background-color: #212121;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    #typed {
+        position: absolute;
+        margin-top: 120px;
+        margin-left: 50px;
+        color: white;
+        font-size: 50px;
+        font-weight: bold;
+    }
+
+    #scene {
+        display: none;
+    }
+
+    #github-logo {
+        display: none;
+    }
+
+    #projects-text {
+        position: absolute;
+        margin-top: 100px;
+        margin-left: 50px;
+    }
+
+}
