--- a/css/index.css
+++ b/css/index.css
@@ -15,16 +15,14 @@ body {
     text-align: center;
 }
 
-#index-particles canvas{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+#index-particles canvas {
+    position: fixed;
     z-index: -1;
 }
 
 #profile-box {
-    margin-top: 130px;
-    margin-bottom: 150px;
+    padding-top: 130px;
+    padding-bottom: 150px;
     color: white;
 }
 
