--- a/css/index.css
+++ b/css/index.css
@@ -175,7 +175,7 @@ body {
 
     #technologies {
         position: relative;
-        height: 300px;
+        height: 200px;
         background-image: url("/images/index/coding_background.jpg");
         background-color: #212121;
         background-position: center;
@@ -186,7 +186,7 @@ body {
 
     #typed {
         position: absolute;
-        margin-top: 120px;
+        margin-top: 75px;
         margin-left: 30px;
         color: white;
         font-size: 35px;
@@ -206,6 +206,7 @@ body {
         position: absolute;
         margin-top: 100px;
         margin-left: 30px;
+        margin-right: 30px;
     }
 
 }
