--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ body {
     margin-bottom: 30px;
     color: white;
     font-size: 20px;
-    text-align: justify;
+    text-align: left;
 }
 
 #about-me h1 {
